# sim2claw

./: .gitattributes  .gitignore  AGENTS.md  GOAL.md  LICENSE  README.md  executor-reviewer-pair-programming.md  pyproject.toml  requirements.txt
.factory/: learning-factory-ledger.md  orchestration-ledger.md
docs/: BUILD_PLAN.md  GENESIS_RECEIPT.md  POLYCAM_CHESS_TABLE_SCENE.md  README.md  VISUALIZATION_STUDIO.md  VISUALIZATION_STUDIO_REDESIGN.md
evals/: __init__.py
nemoclaw/: AGENTS.md  README.md
project_submittals/: README_submittal.md  VIDEO_REVIEW_AND_SHOT_PLAN.md
scripts/: analyze_groot_counterfactual_language.py  analyze_groot_n17_consensus_closed_loop.py  analyze_groot_n17_consensus_sweep.py  analyze_groot_n17_perception_gate.py  analyze_groot_n17_phase_divergence.py  analyze_groot_n17_rate_limited_temporal.py  analyze_groot_n17_temporal_overlap.py  analyze_groot_open_loop_comparison.py  audit_autonomous_workflow.sh  audit_dev_loop.sh  audit_physical_replay_joint_limits.py  bootstrap_autonomous_workflow.sh  bootstrap_runtime.sh  build_groot_counterfactual_language_dataset.py  build_groot_phase_language_dataset.py  build_physical_move_catalog.py  build_ranked_grasp_gallery.py  check_groot_n17_hf_access.sh  closeout_pawn_bg_grasp_campaign.py  closeout_pawn_bg_rubber_retention.py  compile_sail_grasp_retention_closeout.py  compile_sail_inspect_campaign.py  compile_sail_project_application.py  compile_sail_retrospective_case.py  compile_sail_twin_capability.py  export_groot_n17_physical_bg_exploratory.py  export_groot_n17_zoh_dataset.py  grade_public_demos.py  (+44 more)
(+1005 files in other folders)
